[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/node_designer/nodes/generators/pulse_node.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/slider_slot.tscn" type="PackedScene" id=3]

[node name="Pulse" type="GraphNode"]
margin_right = 181.0
margin_bottom = 59.0
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = true
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = true
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = true
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
slot/8/left_enabled = true
slot/8/left_type = 0
slot/8/left_color = Color( 1, 1, 1, 1 )
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color( 1, 1, 1, 1 )
slot/9/left_enabled = true
slot/9/left_type = 0
slot/9/left_color = Color( 1, 1, 1, 1 )
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color( 1, 1, 1, 1 )
slot/10/left_enabled = true
slot/10/left_type = 0
slot/10/left_color = Color( 1, 1, 1, 1 )
slot/10/right_enabled = false
slot/10/right_type = 0
slot/10/right_color = Color( 1, 1, 1, 1 )
slot/11/left_enabled = true
slot/11/left_type = 0
slot/11/left_color = Color( 1, 1, 1, 1 )
slot/11/right_enabled = false
slot/11/right_type = 0
slot/11/right_color = Color( 1, 1, 1, 1 )
slot/12/left_enabled = false
slot/12/left_type = 0
slot/12/left_color = Color( 1, 1, 1, 1 )
slot/12/right_enabled = false
slot/12/right_type = 0
slot/12/right_color = Color( 1, 1, 1, 1 )
slot/13/left_enabled = false
slot/13/left_type = 0
slot/13/left_color = Color( 1, 1, 1, 1 )
slot/13/right_enabled = false
slot/13/right_type = 0
slot/13/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
base_title = "NODE_PULSE_TITLE"

[node name="Output" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 245.0
margin_bottom = 38.0
hint_tooltip = "NODE_OUTPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_OUTPUT_PORT"
align = 2

[node name="Freq" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 39.0
margin_right = 245.0
margin_bottom = 53.0
type = 1
label = "NODE_FREQUENCY_PORT"
tooltip = "NODE_FREQUENCY_PORT_TTIP"
min_value = -32.0
max_value = 32.0
value = 1.0
clamp_lo = false
clamp_hi = false
nullable = false

[node name="Amplitude" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 54.0
margin_right = 245.0
margin_bottom = 68.0
type = 2
label = "NODE_AMPLITUDE_PORT"
tooltip = "NODE_AMPLITUDE_PORT_TTIP"
value = 1.0
clamp_lo = false
clamp_hi = false
nullable = false

[node name="Phi0" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 69.0
margin_right = 245.0
margin_bottom = 83.0
type = 3
label = "NODE_PHI0_PORT"
tooltip = "NODE_PHI0_PORT_TTIP"
nullable = false

[node name="Decay" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 84.0
margin_right = 245.0
margin_bottom = 98.0
type = 5
label = "NODE_DECAY_PORT"
tooltip = "NODE_DECAY_PORT_TTIP"
min_value = 0.0
nullable = false

[node name="DCOffset" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 99.0
margin_right = 245.0
margin_bottom = 113.0
type = 6
label = "NODE_DC_OFFSET_PORT"
tooltip = "NODE_DC_OFFSET_PORT_TTIP"
clamp_lo = false
clamp_hi = false
nullable = false

[node name="PositiveStart" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 114.0
margin_right = 245.0
margin_bottom = 128.0
label = "NODE_POS_START_PORT"
tooltip = "NODE_POS_START_PORT_TTIP"
nullable = false

[node name="PositiveLength" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 129.0
margin_right = 245.0
margin_bottom = 143.0
label = "NODE_POS_LEN_PORT"
tooltip = "NODE_POS_LEN_TTIP"
min_value = 0.0
nullable = false

[node name="PositiveAmplitude" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 144.0
margin_right = 245.0
margin_bottom = 158.0
label = "NODE_POS_AMP_PORT"
tooltip = "NODE_POS_AMP_PORT_TTIP"
nullable = false

[node name="NegativeStart" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 159.0
margin_right = 245.0
margin_bottom = 173.0
label = "NODE_NEG_START_PORT"
tooltip = "NODE_NEG_START_PORT_TTIP"
nullable = false

[node name="NegativeLength" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 174.0
margin_right = 245.0
margin_bottom = 188.0
label = "NODE_NEG_LEN_PORT"
tooltip = "NODE_NEG_LEN_PORT_TTIP"
min_value = 0.0
nullable = false

[node name="NegativeAmplitude" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 189.0
margin_right = 245.0
margin_bottom = 203.0
label = "NODE_NEG_AMP_PORT"
tooltip = "NODE_NEG_AMP_PORT_TTIP"
nullable = false

[node name="RangeFrom" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 204.0
margin_right = 245.0
margin_bottom = 218.0
type = 7
label = "NODE_RANGE_FROM_PORT"
tooltip = "NODE_RANGE_FROM_PORT_TTIP"
nullable = false

[node name="RangeLength" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 219.0
margin_right = 245.0
margin_bottom = 233.0
type = 8
label = "NODE_RANGE_LEN_PORT"
tooltip = "NODE_RANGE_LEN_PORT_TTIP"
min_value = 0.0
value = 1.0
nullable = false

[connection signal="value_changed" from="Freq" to="." method="_on_Freq_value_changed"]
[connection signal="value_changed" from="Amplitude" to="." method="_on_Amplitude_value_changed"]
[connection signal="value_changed" from="Phi0" to="." method="_on_Phi0_value_changed"]
[connection signal="value_changed" from="Decay" to="." method="_on_Decay_value_changed"]
[connection signal="value_changed" from="DCOffset" to="." method="_on_DCOffset_value_changed"]
[connection signal="value_changed" from="PositiveStart" to="." method="_on_PositiveStart_value_changed"]
[connection signal="value_changed" from="PositiveLength" to="." method="_on_PositiveLength_value_changed"]
[connection signal="value_changed" from="PositiveAmplitude" to="." method="_on_PositiveAmplitude_value_changed"]
[connection signal="value_changed" from="NegativeStart" to="." method="_on_NegativeStart_value_changed"]
[connection signal="value_changed" from="NegativeLength" to="." method="_on_NegativeLength_value_changed"]
[connection signal="value_changed" from="NegativeAmplitude" to="." method="_on_NegativeAmplitude_value_changed"]
[connection signal="value_changed" from="RangeFrom" to="." method="_on_RangeFrom_value_changed"]
[connection signal="value_changed" from="RangeLength" to="." method="_on_RangeLength_value_changed"]
